ECM documentation is ready

--- a/components.html
+++ b/components.html
@@ -304,6 +304,24 @@
         <h2 class="bs-docs-featurette-title">Complex solutions</h2>
         <div class="row">
           <div class="col-md-6">
+            <h2>ECM</h2>
+            <p>Everit Component Model</p>
+            <p>
+              <a class="btn btn-outline btn-default" href="ecm/index.html" role="button"
+                target="_blank">View details &raquo;</a>
+            </p>
+          </div>
+          <div class="col-md-6">
+            <h2>Blobstore</h2>
+            <p>Transactional store for binary content</p>
+            <p>
+              <a class="btn btn-outline btn-default" href="blobstore.html" role="button"
+                target="_blank">View details &raquo;</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
             <h2>Resource</h2>
             <p>Modules that connects everything in a relational database.</p>
             <p>
@@ -380,20 +398,6 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <h2>Blobstore</h2>
-            <p>Transactional store for binary content</p>
-            <p>
-              <a class="btn btn-outline btn-default" href="blobstore.html"
-                role="button" target="_blank">View details &raquo;</a>
-            </p>
-          </div>
-          <div class="col-md-6">
-            <h2>Audit</h2>
-            <p>Coming soon...</p>
-          </div>
-        </div>
       </div>
       <hr class="featurette-divider">
 
@@ -411,12 +415,12 @@
             </p>
           </div>
           <div class="col-md-6">
-            <h2>thymeleaf-mvel2</h2>
-            <p>Classes that make it possible to use thymeleaf with Mvel2 as an expression
-              evaluator</p>
+            <h2>templating-html</h2>
+            <p>Everit Web Templating can be used to render web pages based on HTML templates.
+              The library can also be used to generate XMLs as XML syntax is compatible with HTML.</p>
             <p>
               <a class="btn btn-outline btn-default"
-                href="https://github.com/everit-org/thymeleaf-mvel2" role="button" target="_blank">View
+                href="https://github.com/everit-org/templating-html" role="button" target="_blank">View
                 details &raquo;</a>
             </p>
           </div>
@@ -431,6 +435,16 @@
               <a class="btn btn-outline btn-default"
                 href="https://github.com/everit-org/osgi-remote-jersey" role="button"
                 target="_blank">View details &raquo;</a>
+            </p>
+          </div>
+          <div class="col-md-6">
+            <h2>thymeleaf-mvel2</h2>
+            <p>Classes that make it possible to use thymeleaf with Mvel2 as an expression
+              evaluator</p>
+            <p>
+              <a class="btn btn-outline btn-default"
+                href="https://github.com/everit-org/thymeleaf-mvel2" role="button" target="_blank">View
+                details &raquo;</a>
             </p>
           </div>
         </div>
