--- a/documentation.html
+++ b/documentation.html
@@ -69,14 +69,27 @@
         <h2 class="bs-docs-featurette-title ">Cookbook</h2>
         <p class="lead ">The goal of the cookbook is to provide a step-by-step style documentation for developers
           who meet OSGi and the Everit related technologies for the first time.</p>
-        <a href="http://cookbook.everit.org " target="_blank" class="btn btn-outline btn-lg ">Start reading</a>
+        <a href="http://cookbook.everit.org" target="_blank" class="btn btn-outline btn-lg ">Start reading</a>
+      </div>
+    </div>
+    <div class="col-md-10">
+      <div class="bs-docs-featurette" id="everit-component-model">
+        <h2 class="bs-docs-featurette-title ">Everit Component Model</h2>
+        <p class="lead ">
+          ECM is a <a href="http://wiki.osgi.org/wiki/Component_Models_Overview">component model</a>
+          designed to work well in large OSGi based applications. Developers who have used <a
+            href="http://wiki.osgi.org/wiki/Declarative_Services">Declarative Services</a> before
+          will find the concept of ECM familiar.
+        </p>
+        <a href="ecm/index.html" target="_blank" class="btn btn-outline btn-lg ">Start reading</a>
       </div>
     </div>
     <div class="col-md-2">
       <nav id="affix-nav">
         <ul class=" nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350"
           data-offset-bottom="140">
-          <li class="active"><a href="#cookbook">Cookbook</a></li>
+          <li><a href="#cookbook">Cookbook</a></li>
+		  <li><a href="#everit-component-model">Everit Component Model</a></li>
         </ul>
       </nav>
     </div>
